Bug 266823 - kio_http doesn't properly parse quoted multipart boundary with = inside.
Summary: kio_http doesn't properly parse quoted multipart boundary with = inside.
Status: RESOLVED FIXED
Alias: None
Product: kio
Classification: Unmaintained
Component: http (other bugs)
Version First Reported In: SVN
Platform: Compiled Sources Linux
: NOR normal
Target Milestone: ---
Assignee: kdelibs bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2011-02-21 17:14 UTC by Maksim Orlovich
Modified: 2011-03-02 20:04 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Maksim Orlovich 2011-02-21 17:14:10 UTC
Version:           SVN (using Devel) 
OS:                Linux

The W3 bugzilla (see link off http://dev.w3.org/2006/webapi/WebIDL/ for 'known bugs') serves itself as Content-Type: multipart/x-mixed-replace;boundary="------- =_aaaaaaaaaa0"

kio_http currently can't parse this as it splits on = without regards for quoting. 

Note: kmultipart (which handles multi-part content) currently crashes. Have a fix pending, let me know if you need the diff if someone gets to this issue before I commit the kmultipart fix. Actually, please let me know if you're going to be working on this, since I might just decide to fix this myself otherwise.



Reproducible: Always




OS: Linux (i686) release 2.6.37-server-1mnb
Compiler: gcc
Comment 1 Dawit Alemayehu 2011-03-01 22:27:34 UTC
Git commit eddc5487895fdfe0f8bec4bb127a586237873852 by Dawit Alemayehu.
Committed on 01/03/2011 at 22:23.
Pushed by adawit into branch 'KDE/4.6'.

Correctly parse the parameter portion of the content-type header based on
RFC 2616 section 3.7.

BUG:266823

M  +15   -10   kioslave/http/http.cpp     

http://commits.kde.org/kdelibs/eddc5487895fdfe0f8bec4bb127a586237873852
Comment 2 Dawit Alemayehu 2011-03-01 22:30:52 UTC
Git commit b648716830f16de2cb7f5efec63a6ad39c916846 by Dawit Alemayehu.
Committed on 01/03/2011 at 22:28.
Pushed by adawit into branch 'master'.

Correctly parse the parameter portion of the content-type header based on
RFC 2616 section 3.7.

BUG:266823

M  +15   -10   kioslave/http/http.cpp     

http://commits.kde.org/kdelibs/b648716830f16de2cb7f5efec63a6ad39c916846
Comment 3 Matteo Agostinelli 2011-03-02 20:01:14 UTC
Git commit 06a423bcea6f6347c9757f754164ba3c83080822 by Matteo Agostinelli.
Committed on 02/03/2011 at 19:54.
Pushed by agostinelli into branch 'master'.

Remove unnecessary descriptions

Remove outdated and unnecessary descriptions when uploading to GHNS.
This also fixes compilation issues for KDE < 4.5

BUG:266823
CCBUG:266823

M  +0    -1    src/mainwindow.cpp     
M  +0    -1    src/widgets/templatechoosedialog.cpp     

http://commits.kde.org/cirkuit/06a423bcea6f6347c9757f754164ba3c83080822
Comment 4 Matteo Agostinelli 2011-03-02 20:01:14 UTC
Git commit 06a423bcea6f6347c9757f754164ba3c83080822 by Matteo Agostinelli.
Committed on 02/03/2011 at 19:54.
Pushed by agostinelli into branch 'master'.

Remove unnecessary descriptions

Remove outdated and unnecessary descriptions when uploading to GHNS.
This also fixes compilation issues for KDE < 4.5

BUG:266823
CCBUG:266823

M  +0    -1    src/mainwindow.cpp     
M  +0    -1    src/widgets/templatechoosedialog.cpp     

http://commits.kde.org/cirkuit/06a423bcea6f6347c9757f754164ba3c83080822
Comment 5 Matteo Agostinelli 2011-03-02 20:04:55 UTC
Git commit 4b6c53ba4cc4170c75bf3184745edb7c5a76240b by Matteo Agostinelli.
Committed on 02/03/2011 at 19:54.
Pushed by agostinelli into branch 'master'.

Remove unnecessary descriptions

Remove outdated and unnecessary descriptions when uploading to GHNS.
This also fixes compilation issues for KDE < 4.5

BUG: 266823
CCBUG: 266823

M  +0    -1    src/mainwindow.cpp     
M  +0    -1    src/widgets/templatechoosedialog.cpp     

http://commits.kde.org/cirkuit/4b6c53ba4cc4170c75bf3184745edb7c5a76240b
Comment 6 Matteo Agostinelli 2011-03-02 20:04:56 UTC
Git commit 4b6c53ba4cc4170c75bf3184745edb7c5a76240b by Matteo Agostinelli.
Committed on 02/03/2011 at 19:54.
Pushed by agostinelli into branch 'master'.

Remove unnecessary descriptions

Remove outdated and unnecessary descriptions when uploading to GHNS.
This also fixes compilation issues for KDE < 4.5

BUG: 266823
CCBUG: 266823

M  +0    -1    src/mainwindow.cpp     
M  +0    -1    src/widgets/templatechoosedialog.cpp     

http://commits.kde.org/cirkuit/4b6c53ba4cc4170c75bf3184745edb7c5a76240b