Correctly parse the parameter portion of the content-type header based on RFC 2616 section 3.7.

BUG:266823